# filenametool

./: Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: tests.sh
