[package]
name = "filenametool"
version = "0.2.0"
edition = "2021"
authors = ["PowerSnail"]
description = "Manipulates paths. A CLI interface to Rust's std::path module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }