[package]
name = "filenametool"
version = "0.2.1"
edition = "2021"
authors = ["PowerSnail"]
description = "Manipulates paths. A CLI interface to Rust's std::path module."
license = "MIT"
readme = "README.md"
repository = "https://github.com/PowerSnail/filenametool"
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "^3", features = ["derive"] }